@@ -27,7 +27,6 @@ import com.google.gdata.data.media.mediarss.MediaKeywords
 import org.apache.commons.lang.StringUtils
 
 import org.springframework.beans.factory.InitializingBean
-import org.springframework.web.context.request.RequestContextHolder
 
 /**
  * Grails service to expose the required Picasa API methods to the
@@ -48,25 +47,34 @@ class PicasaService implements InitializingBean {
     private static final String GOOGLE_GDATA_API_URL = "http://picasaweb.google.com/data/feed/api"
     
     // Declare cache (used to reduce Google API calls)
+    private static ServiceCache CACHE
     private static Map<String, List> tagCache = new HashMap<String, List>()
     private static final byte TAG_WEIGHT_SPLIT_TOTAL = 7
 
-    // Declare dependencies
-    PicasawebService picasaWebService
+    // Declare picasa properties
+    private PicasawebService picasaWebService
+    private def picasaUsername
+    private def picasaPassword
+    private def picasaApplicationName
+    private def picasaImgmax
+    private def picasaThumbsize
+    private def picasaMaxResults
+
+    // Container properties
     def grailsApplication
-    def picasaUsername
-    def picasaPassword
-    def picasaApplicationName
-    def picasaImgmax
-    def picasaThumbsize
-    def picasaMaxResults
+
+    // Cache keys
+    public static enum PicasaQuery {
+        LIST_ALBUMS
+    }
 
     /**
      * Initialise config properties.
      */
     @Override
     void afterPropertiesSet() {
-        log?.debug "Initialising the ${this.getClass().getSimpleName()}..."
+        log?.info "Initialising the ${this.getClass().getSimpleName()}..."
+        CACHE = PicasaServiceCache.getInstance(grailsApplication.config?.picasa?.cacheTimeout)
         reset()
     }
 
@@ -85,7 +93,7 @@ class PicasaService implements InitializingBean {
     boolean connect(final String picasaUsername, final String picasaPassword,
             final String picasaApplicationName, final String picasaImgmax,
             final String picasaThumbsize, final String picasaMaxResults) {
-        log?.debug "Setting the ${this.getClass().getSimpleName()} configuration..."
+        log?.info "Setting the ${this.getClass().getSimpleName()} configuration..."
 
         this.picasaUsername = picasaUsername
         this.picasaPassword = picasaPassword
@@ -93,7 +101,11 @@ class PicasaService implements InitializingBean {
         this.picasaImgmax = picasaImgmax
         this.picasaThumbsize = picasaThumbsize
         this.picasaMaxResults = picasaMaxResults
+        
+        // Empty cache
+        CACHE?.purge()
 
+        // Validate properties and attempt to initialise the service
         return validateAndInitialiseService()
     }
 
@@ -104,7 +116,7 @@ class PicasaService implements InitializingBean {
      * @return whether a new connection was successfully made.
      */
     boolean reset() {
-        log?.debug "Resetting ${this.getClass().getSimpleName()} configuration..."
+        log?.info "Resetting ${this.getClass().getSimpleName()} configuration..."
 
         // Get configuration from Config.groovy
         this.picasaUsername = grailsApplication.config?.picasa?.username
@@ -115,6 +127,9 @@ class PicasaService implements InitializingBean {
         this.picasaImgmax = grailsApplication.config?.picasa?.imgmax
         this.picasaThumbsize = grailsApplication.config?.picasa?.thumbsize
         this.picasaMaxResults = grailsApplication.config?.picasa?.maxResults
+
+        // Empty cache
+        CACHE?.purge()
 
         // Validate properties and attempt to initialise the service
         return validateAndInitialiseService()
@@ -133,6 +148,18 @@ class PicasaService implements InitializingBean {
             try {
                 // Initialise result
                 final List<Album> albumListing = new ArrayList<Album>()
+
+                // Check cache
+                if (true) {
+                    log?.debug "Attempting to retrieve ${PicasaQuery.LIST_ALBUMS.name()} cache..."
+
+                    final List<Album> cachedListing = CACHE.get(PicasaQuery.LIST_ALBUMS.name())
+                    
+                    if (cachedListing) {
+                        log?.debug "Cache entry found"
+                        return cachedListing
+                    }
+                }
 
                 // Declare feed
                 final URL feedUrl = new URL("$GOOGLE_GDATA_API_URL/user/" +
@@ -154,6 +181,14 @@ class PicasaService implements InitializingBean {
                             albumListing.add(album)
                         }
                     }
+                }
+
+                if (true) {
+                    log?.debug "Updating ${PicasaQuery.LIST_ALBUMS.name()} cache..."
+
+                    CACHE.put(PicasaQuery.LIST_ALBUMS.name(), albumListing)
+
+                    log?.debug "Cache updated"
                 }
 
                 // Return result
@@ -912,6 +947,8 @@ class PicasaService implements InitializingBean {
                 configValid = false
             }
         }
+
+        log?.info "${this.getClass().getSimpleName()} configuration valid"
 
         // Only initialise the service if the configuration is valid
         this.serviceInitialised = configValid
