@@ -19,6 +19,8 @@ Release notes 0.6.0 (TBA)
 - Seperate comment posting to seperate service to allow main service to be stateless.
 - Better error reporting from the Photo and Comment controllers.
 - Introduction of the PicasaCommentService and PicasaCommentServiceException.
+- Introduction of the ServiceCache and PicasaServiceCache.
+- Introduction of the Query enum.
 
 Release notes 0.5.0 (5th July, 2010)
 - Grails update to 1.3.2.
